--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Claim free SLP tokens">
+    <meta name="description" content="Claim some CandyMan Tokens">
   
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon.png">
@@ -13,17 +13,17 @@
     <!-- Social Cards -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="" />
-    <meta name="twitter:title" content="The Simple Ledger Protocol Faucet" />
+    <meta name="twitter:title" content="CandyManToken Faucet" />
     <meta name="twitter:description" content="Browse and explore tokens built on top of Bitcoin Cash" />
     <meta name="twitter:image" content="https://simpleledger.info/img/social.png" />
-    <meta name="twitter:image:alt" content="The Simple Ledger Protocol Faucet" />
+    <meta name="twitter:image:alt" content="CandyManToken Faucet" />
     <meta property="og:url" content="https://simpleledger.network" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="The Simple Ledger Protocol Faucet" />
-    <meta property="og:description" content="Claim free SLP tokens" />
+    <meta property="og:title" content="CandyManToken Faucet" />
+    <meta property="og:description" content="Claim some CANDYMAN tokens" />
     <meta property="og:image" content="" />
 
-    <title>The Simple Ledger Protocol Faucet</title>
+    <title>CandyManToken Faucet</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -46,7 +46,7 @@
       <div class="jumbotron text-center p-5">
         <img class="logo-main" src="img/logo-slp-faucet.png" alt="SLP Faucet" />
             <h1>The Simple Ledger Protocol Faucet</h1>
-            <p class="lead">Claim free SLP tokens.</p>
+            <p class="lead">Claim some CandyMan tokens.</p>
         <p>The SLP faucet is designed to bring awareness and circulation to the SLP economy.</p>
 
         <form class="token-selector-form" action="/" method="post">
@@ -67,10 +67,10 @@
             <p>error: <%= error %></p>
           <% } %>
           <p>Get your SLP address with <a href="https://simpleledger.cash/project/badger-wallet/">Badger Wallet</a> or <a href="https://simpleledger.cash/project/electron-cash-slp-edition/">Electron Cash SLP Edition</a>.</p>
-          <p><input type="submit" value="Claim free SLP tokens"></p>
+          <p><input type="submit" value="Claim some CandyMan tokens"></p>
           <p>
             <a
-              href="https://heroku.com/deploy?template=https://github.com/simpleledger/slp-faucet">
+              href="https://github.com/">
               <img src="https://www.herokucdn.com/deploy/button.svg" alt="Deploy">
             </a>
           </p>
@@ -80,7 +80,7 @@
         <h4 class="mb-4">Stay up to date:</h4>
         <ul id="sm-links" class="nav justify-content-center">
           <li class="nav-item">
-            <a href="https://web.telegram.org/#/im?p=@simpleledger"><img src="img/telegram.png" alt="Telegram" /></a>
+            <a href="https://t.me/CandyManToken"><img src="img/telegram.png" alt="Telegram" /></a>
           </li>
           <li class="nav-item">
             <a href="https://twitter.com/SimpleLedger"><img src="img/twitter.png" alt="Twitter" /></a>
@@ -141,7 +141,7 @@
       <footer id="footer-main" class="bg-dark p-5">
         <div class="row">
           <div class="col">
-            <h4>Source Code</h4>
+            <h4>Other Codes</h4>
             <ul class="list-unstyled text-small">
               <li><a class="text-muted" href="http://github.com/blockparty-sh/slp-explorer">SLP Explorer</a></li>
               <li><a class="text-muted" href="https://github.com/simpleledger/SLPDB">SLPDB</a></li>
@@ -161,7 +161,7 @@
           <div class="col">
             <h4>Connect</h4>
             <ul class="list-unstyled text-small">
-              <li><a class="text-muted" href="https://web.telegram.org/#/im?p=@simpleledger">SimpleLedger Chat</a></li>
+              <li><a class="text-muted" href="https://t.me/CandyManToken">CandyManToken Chat</a></li>
               <li><a class="text-muted" href="https://www.youtube.com/channel/UC_WJO3lyHAhdU6oEk0lhMLw">SimpleLedger Youtube</a></li>
               <li><a class="text-muted" href="https://twitter.com/SimpleLedger">SimpleLedger Twitter</a></li>
               <li><a class="text-muted" href="http://t.me/fountainheadcash">Fountainhead Chat</a></li>
