--- a/index.ejs
+++ b/index.ejs
@@ -26,10 +26,10 @@
     <title>CandyManToken Faucet</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="public/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles -->
-    <link href="css/custom.css" rel="stylesheet">
+    <link href="public/css/custom.css" rel="stylesheet">
   </head>
   <body>
     <header class="masthead mb-auto bg-dark">
