--- a/index.ejs
+++ b/index.ejs
@@ -7,8 +7,8 @@
   
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="public/image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="public/image/png" sizes="16x16" href="/favicon-16x16.png">
 
     <!-- Social Cards -->
     <meta name="twitter:card" content="summary" />
@@ -44,7 +44,7 @@
     </header>
     <main role="main">
       <div class="jumbotron text-center p-5">
-        <img class="logo-main" src="img/logo-slp-faucet.png" alt="SLP Faucet" />
+        <img class="logo-main" src="public/img/logo-slp-faucet.png" alt="SLP Faucet" />
             <h1>The Simple Ledger Protocol Faucet</h1>
             <p class="lead">Claim some CandyMan tokens.</p>
         <p>The SLP faucet is designed to bring awareness and circulation to the SLP economy.</p>
